[tool.poetry]
name = "mechsouplite"
version = "0.1.0"
description = ""
authors = ["kumarstack55 <kumarstack55@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
mypy = "^0.782"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
