[tool.poetry]
name = "mechsouplite"
version = "0.1.1"
description = ""
authors = ["kumarstack55 <kumarstack55@gmail.com>"]
license = "MIT"
repository = "https://github.com/kumarstack55/python-mechsouplite"

[tool.poetry.dependencies]
python = "^3.6.1"
requests = "^2.24.0"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
mypy = "^0.782"
flake8 = "^3.8.4"
pre-commit = "^2.7.1"
black = "^20.8b1"
coverage = "^5.3"
pytest-cov = "^2.10.1"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
